Fix mobile avatar overlap
Fixes #110

--- a/style.scss
+++ b/style.scss
@@ -55,7 +55,7 @@ $header-footer-background: #303b47;
 $category-header-background: #96918f;
 $hr-color: #dbd8d5;
 
-$mobile-footer-height: 55px;
+$mobile-footer-height: 45px;
 
 @media screen and (min-width:641px) {
   body {
