--- a/stylesheets/avatar-select.scss
+++ b/stylesheets/avatar-select.scss
@@ -189,7 +189,7 @@ body.admin-bar #collapse-sidebar {
     }
 
     ul {
-      margin-top:-20px;
+      margin-top:-30px;
 
       li:first-child {
         width:0;
